feat: local-first data loading for HPA/GTEx + JSON pattern files
- Added workers/common/local_data_loader.py:
  - HPALocalLoader: loads rna_tissue_hpa.tsv, subcellular_locations.tsv
  - GTExLocalLoader: loads 3.5GB GCT file with gene index for fast lookup
  - PatternLoader: loads ptm-expression-patterns-v4.json (350 patterns)
    and relationship-patterns.json (85 patterns) from /app/data/config/

- Updated enrichment_pipeline.py:
  - Local-first with API fallback for HPA and GTEx queries
  - Fixed fulltext_analyzer.analyze() call signature mismatch
  - Added _run_fulltext_analysis() method for proper PMC integration

- Updated fulltext_analyzer.py:
  - Loads patterns from config JSON files with built-in fallback
  - Added relationship pattern matching from relationship-patterns.json
  - Added mechanisms extraction
  - Dynamic category support for config-loaded patterns

- Updated .gitignore:
  - data/local_data/* and data/config/* excluded (large files)
  - README.md files in those dirs are tracked

- Added README.md for data/local_data/ and data/config/
  with download instructions and file format documentation

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,16 @@ storage/logs/
 data/inputs/
 data/outputs/
 
+# Local data files (large, mounted via Docker volumes — NOT pushed to Git)
+# Contains: GTEx (3.5GB), HPA TSVs, pattern JSON configs
+data/local_data/*
+!data/local_data/README.md
+data/config/*
+!data/config/README.md
+
+# GTEx gene index cache (auto-generated at runtime)
+*.gtex_gene_index.json
+
 # Reference data (large FASTA etc. - add back if needed)
 # data/reference/
 
