feat: LLM auto-fallback (Ollama→OpenAI→Gemini) + permanent Redis caching
LLM changes:
- llm_client.py: auto-detect provider with fallback chain
  Ollama (local) → OpenAI → Gemini, first available wins
- enrichment_pipeline.py: fix LLMClient initialization bug
  (was calling AbstractAnalyzer() without llm_client argument)
- enrichment_pipeline.py: auto-disable LLM if no provider available
- docker-compose.yml: add LLM_PROVIDER, OPENAI_API_KEY, OPENAI_MODEL,
  GEMINI_API_KEY env vars to rag and report workers
- .env.example: document new LLM configuration variables

Redis caching changes:
- All MCP tools: remove TTL (ex=) from redis.set() calls
  Articles, pathways, interactions don't change once published
- pubmed.py: per-article caching (pubmed:article:{pmid}) for reuse
- Redis config: increase maxmemory 512mb→2gb, noeviction policy
  Prevents permanent cache from being evicted under memory pressure

--- a/.env.example
+++ b/.env.example
@@ -36,15 +36,21 @@ CHROMADB_HOST=chromadb
 CHROMADB_PORT=8000
 CHROMADB_URL=http://${CHROMADB_HOST}:${CHROMADB_PORT}
 
-# ─── Ollama (Local LLM) ─────────────────────────────────────────────────────
+# ─── LLM Configuration ───────────────────────────────────────────────────────
+# Provider priority: auto = Ollama → OpenAI → Gemini (first available wins)
+LLM_PROVIDER=auto
+LLM_MODEL=gemma3:27b
+
+# Ollama (Local LLM)
 OLLAMA_HOST=host.docker.internal
 OLLAMA_PORT=11434
 OLLAMA_URL=http://${OLLAMA_HOST}:${OLLAMA_PORT}
-DEFAULT_LLM_MODEL=qwen2.5:7b
 
-# ─── Cloud LLM (Optional) ───────────────────────────────────────────────────
-GEMINI_API_KEY=
+# Cloud LLM fallback (used when Ollama is unavailable)
 OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4.1-mini
+GEMINI_API_KEY=
+GEMINI_MODEL=gemini-2.5-flash
 ANTHROPIC_API_KEY=
 
 # ─── MCP Server ──────────────────────────────────────────────────────────────
